--- a/hugo/layouts/partials/sidebar.html
+++ b/hugo/layouts/partials/sidebar.html
@@ -1,12 +1,13 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
-    <div>
+    <div style="width: 200px; margin: 0 auto;">
       <a href="http://blokada.org"><img src="{{ "/logo.png" | absURL }}"
            alt="logo" title="{{ .Site.Author.name }}"></a>
     </div>
 
     <ul class="sidebar-nav">
       <li class="sidebar-nav-item"><a href="{{ "/" | absURL }}">{{ if isset .Site.Params "home"}}{{ .Site.Params.home }}{{ else }}Blog{{ end }}</a></li>
+      <li class="sidebar-nav-item"><a href="{{ "http://blokada.org/#download" | absURL }}">Download Blokada</a></li>
       {{ range .Site.Menus.main }}
       <li class="sidebar-nav-item">{{ .Pre }}<a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
       {{end}}
