--- a/hugo/static/css/blokada.css
+++ b/hugo/static/css/blokada.css
@@ -41,3 +41,18 @@
 .theme-base-blokada .related-posts li a:hover {
   color: #df5401;
 }
+
+.yt-container {
+   	position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.yt-video {
+	  position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
